--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <h1>Fruit Shop</h1>
-    <h2>I have Rs. <span>28</span></h2>
-    <h3>Your Total is Rs. <span>27</span></h3>
+    <h2>I have Rs. <input class="have-cash" type="number" min="0" value="0"></h2>
+    <h3>Your Total is Rs. <span class="totalbill">0</span></h3>
     <div id="items">
         <div class="item-1">
             <h4>Rs. 10</h4>
@@ -22,9 +22,9 @@
                 <img src="images/item-1.PNG" alt="apple">
                 <h5>Apple</h5>
                 <div class="pick">
-                    <button class="plus"><i class="fas fa-plus"></i></button>
+                    <button class="plus" onclick="addapple()"><i class="fas fa-plus"></i></button>
                     <input type="number" class="quantity" min="0" value="0">
-                    <button class="minus"><i class="fas fa-minus"></i></button>
+                    <button class="minus" onclick="minusapple()"><i class="fas fa-minus"></i></button>
                 </div>
             </div>
         </div>
